force-app/main/default/objects/UAT_Feedback__c/UAT_Feedback__c.object-meta.xml
<CustomObject>
    <description>The UAT Feedback custom object is used to collect and track User Acceptance Testing feedback from customers. The object contains information about the feedback, including the description, type, status, priority, and date, as well as the customer who provided the feedback. This information is used to improve the product and processes and to provide insights into customer feedback.</description>
    <label>UAT Feedback</label>
    <nameField>
        <displayFormat>UAT-{00000000}</displayFormat>
        <label>UAT No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>