force-app/main/default/objects/UAT_Feedback__c/fields/Assigned_to_UAT__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_UAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup relationship to the user to show which consultant is working on the UAT item</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UAT_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>