force-app/main/default/objects/UAT_Feedback__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Reason for UAT Feedback being blocked</description>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>