force-app/main/default/objects/UAT_Feedback__c/fields/Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Client_Comments__c</fullName>
    <description>A field for customers to enter comments into when a UAT feedback record already is being worked on, re-tested, or requires more information.</description>
    <inlineHelpText>Please enter comments here in response to R3 Digital Comments and/or if you have additional details that will help to fulfil the UAT feedback item.</inlineHelpText>
    <label>Client Comments</label>
    <type>TextArea</type>
</CustomField>