force-app/main/default/objects/UAT_Feedback__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <description>A field to show when the UAT feedback item has been resolved.</description>
    <inlineHelpText>Update this field to display when a UAT feedback item has been resolved.</inlineHelpText>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>