force-app/main/default/objects/UAT_Feedback__c/fields/Elapsed_Time_in_Open_Status_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_in_Open_Status_Days__c</fullName>
    <formula>IF(ISPICKVAL(Status_UAT_Feedback__c, &quot;Open&quot;), 
   (NOW() - CreatedDate), 
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time in Open Status (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>