force-app/main/default/objects/UAT_Feedback__c/fields/Est_Effort_uat_hours__c.field-meta.xml
<CustomField>
    <fullName>Est_Effort_uat_hours__c</fullName>
    <description>A field for consultants to enter as an estimate of time required to fulfil the UAT item.</description>
    <label>Est. Effort (Hours)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>