force-app/main/default/objects/UAT_Feedback__c/fields/Feedback_Description__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Description__c</fullName>
    <description>This field should be used to provide information about issues related to work items in the project.</description>
    <inlineHelpText>This field should be used to provide detailed information about issues related to work items in the project. Be as specific as possible, including any relevant details about the impact of the issue, including screenshots where necessary.</inlineHelpText>
    <label>Feedback Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>