force-app/main/default/objects/UAT_Feedback__c/fields/Feedback_Subject__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Subject__c</fullName>
    <description>A field for customers to submit a brief descriptions about issues, questions and new change requests that have arisen during UAT.</description>
    <inlineHelpText>Please provide a brief description of the issue you are reporting.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>