force-app/main/default/objects/UAT_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <description>A field to record and display the type of UAT feedback item that provided.</description>
    <inlineHelpText>Please submit whether your UAT feedback item is an issue, a question or a change request.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
                <default>true</default>
                <label>Issue</label>
            </value>
            <value>
                <fullName>Change Request (New Work Item)</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>