force-app/main/default/objects/UAT_Feedback__c/fields/Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Count__c</fullName>
    <label>Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>