force-app/main/default/objects/UAT_Feedback__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>A field to display the level of priority that should be given to resolving a UAT feedback record</description>
    <inlineHelpText>Please assign the level of priority that this feedback record should be provided.</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
                <color>#006600</color>
                <label>Highest</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#009900</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#33FF33</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Lowest</fullName>
                <color>#66FF99</color>
                <label>Lowest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>