force-app/main/default/objects/UAT_Feedback__c/fields/Project_UAT__c.field-meta.xml
<CustomField>
    <fullName>Project_UAT__c</fullName>
    <description>Master-detail relationship field to record which project UAT Feedback is related to.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>UAT Feedback Records</relationshipLabel>
    <relationshipName>UAT_Feedback_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>