force-app/main/default/objects/UAT_Feedback__c/fields/R3_Comments_UAT__c.field-meta.xml
<CustomField>
    <fullName>R3_Comments_UAT__c</fullName>
    <description>A field for R3 Digital employees to add text to in order to communicate to Customers.</description>
    <label>R3 Digital Comments</label>
    <type>TextArea</type>
</CustomField>