force-app/main/default/objects/UAT_Feedback__c/fields/Re_Test_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_Test_Count__c</fullName>
    <label>Re-Test Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>