force-app/main/default/objects/UAT_Feedback__c/fields/Status_UAT_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Status_UAT_Feedback__c</fullName>
    <description>A field to record and display what the status of a UAT feedback record is.</description>
    <inlineHelpText>Please update the status of your UAT feedback.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#FF6666</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>WIP</fullName>
                <color>#FFFF66</color>
                <label>WIP</label>
            </value>
            <value>
                <fullName>Re-Test</fullName>
                <color>#FF9966</color>
                <label>Re-Test</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#9999FF</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>