force-app/main/default/objects/UAT_Feedback__c/fields/Time_in_Open__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Open__c</fullName>
    <formula>IF(ISPICKVAL(Status_UAT_Feedback__c, &quot;Open&quot;), (NOW() - CreatedDate) * 24, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time in Open Status (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>