force-app/main/default/objects/UAT_Feedback__c/fields/WIP_Count__c.field-meta.xml
<CustomField>
    <fullName>WIP_Count__c</fullName>
    <label>WIP Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>