force-app/main/default/objects/UAT_Feedback__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to create a relationship between the UAT Feedback and Work Item tab</description>
    <inlineHelpText>Please select the work item that this is related to.</inlineHelpText>
    <label>Work Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Work_Item__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_UAT__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>UAT Feedback</relationshipLabel>
    <relationshipName>UAT_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>