force-app/main/default/objects/UAT_Feedback__c/validationRules/Only_allow_WIP_if_Assigned_to_has_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_allow_WIP_if_Assigned_to_has_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status_UAT_Feedback__c, &quot;WIP&quot;),
    ISBLANK(Assigned_to_UAT__c)
)</errorConditionFormula>
    <errorMessage>Assign a resource to this UAT Feedback Item before submitting to WIP</errorMessage>
</ValidationRule>