force-app/main/default/objects/UAT_Feedback__c/validationRules/Require_Blocked_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blocked_Reason</fullName>
    <active>true</active>
    <description>Require a reason when the status is set to blocked</description>
    <errorConditionFormula>ISPICKVAL(Status_UAT_Feedback__c , &quot;Blocked&quot;) &amp;&amp; ISBLANK(Blocked_Reason__c)</errorConditionFormula>
    <errorDisplayField>Blocked_Reason__c</errorDisplayField>
    <errorMessage>Blocked Reason must be provided when Status is set to Blocked.</errorMessage>
</ValidationRule>