force-app/main/default/objects/UAT_Feedback__c/listViews/All_UAT_Feedback.listView-meta.xml
<ListView>
    <fullName>All_UAT_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Project_UAT__c</columns>
    <columns>Feedback_Subject__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_to_UAT__c</columns>
    <columns>Status_UAT_Feedback__c</columns>
    <columns>Date_Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All UAT Feedback</label>
</ListView>